--- a/MinusBotDiscord/pom.xml
+++ b/MinusBotDiscord/pom.xml
@@ -7,7 +7,7 @@
     <groupId>fr.minuskube.bot</groupId>
     <artifactId>MinusBotDiscord</artifactId>
     <packaging>jar</packaging>
-    <version>1.3.0</version>
+    <version>1.4.0</version>
 
     <properties>
         <jdk.version>1.8</jdk.version>
@@ -90,6 +90,11 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>20150729</version>
+        </dependency>
+        <dependency>
+            <groupId>com.rometools</groupId>
+            <artifactId>rome</artifactId>
+            <version>1.7.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
