--- a/MinusBotDiscord/pom.xml
+++ b/MinusBotDiscord/pom.xml
@@ -6,8 +6,7 @@
 
     <groupId>fr.minuskube.bot</groupId>
     <artifactId>MinusBotDiscord</artifactId>
-    <packaging>jar</packaging>
-    <version>1.4.1</version>
+    <version>1.6.2</version>
 
     <properties>
         <jdk.version>1.8</jdk.version>
@@ -46,6 +45,7 @@
             <!-- Set classpath with dependencies -->
             <plugin>
                 <artifactId>maven-jar-plugin</artifactId>
+                <version>3.0.2</version>
                 <configuration>
                     <archive>
                         <manifest>
@@ -74,7 +74,7 @@
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>3.0.BETA_77</version>
+            <version>3.0.BETA2_108</version>
         </dependency>
         <dependency>
             <groupId>at.mukprojects</groupId>
@@ -105,6 +105,16 @@
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>1.10</version>
+        </dependency>
+        <dependency>
+            <groupId>com.mashape.unirest</groupId>
+            <artifactId>unirest-java</artifactId>
+            <version>1.4.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.10.1</version>
         </dependency>
     </dependencies>
 
