--- a/EchoBot/pom.xml
+++ b/EchoBot/pom.xml
@@ -59,22 +59,11 @@
         </plugins>
     </build>
 
-    <repositories>
-        <repository>
-            <id>jcenter</id>
-            <url>http://jcenter.bintray.com</url>
-        </repository>
-        <repository>
-            <id>jitpack.io</id>
-            <url>https://jitpack.io</url>
-        </repository>
-    </repositories>
-
     <dependencies>
         <dependency>
             <groupId>net.dv8tion</groupId>
             <artifactId>JDA</artifactId>
-            <version>3.0.BETA_77</version>
+            <version>3.0.BETA2_108</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
