--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
 # User-specific stuff:
-.idea/workspace.xml
 .idea/tasks.xml
 
 # Sensitive or high-churn files:
@@ -68,6 +67,7 @@ buildNumber.properties
 ### Sonar ###
 #Sonar generated dir
 /.sonar/
+sonar-project.properties
 
 
 ### Java ###
