--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,13 @@
 
 # Created by https://www.gitignore.io/api/java,intellij+iml,maven,sonar
+# This is a modified version
 
 ### Intellij+iml ###
 # Covers JetBrains IDEs: IntelliJ, RubyMine, PhpStorm, AppCode, PyCharm, CLion, Android Studio and Webstorm
 # Reference: https://intellij-support.jetbrains.com/hc/en-us/articles/206544839
 
-# User-specific stuff:
-.idea/tasks.xml
-
-# Sensitive or high-churn files:
-.idea/dataSources.ids
-.idea/dataSources.xml
-.idea/dataSources.local.xml
-.idea/sqlDataSources.xml
-.idea/dynamic.xml
-.idea/uiDesigner.xml
-
-# Gradle:
-.idea/gradle.xml
-.idea/libraries
-
-# Mongo Explorer plugin:
-.idea/mongoSettings.xml
+# IntelliJ folder
+.idea/
 
 ## File-based project format:
 *.iws
@@ -48,7 +34,6 @@ fabric.properties
 
 *.iml
 modules.xml
-.idea/misc.xml 
 *.ipr
 
 
