--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,11 @@ sonar-project.properties
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# Project specific
+config.txt
+
+# Eclipse files
+.settings/
+.classpath
+.project
