--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
-# Created by https://www.gitignore.io/api/java,intellij+iml,maven,sonar
+# Created by https://www.gitignore.io/api/java,intellij+iml,maven,sonar,gradle
 # This is a modified version
 
 ### Intellij+iml ###
@@ -76,3 +76,22 @@ config.txt
 .settings/
 .classpath
 .project
+
+### Gradle ###
+.gradle
+build/
+
+# Ignore Gradle GUI config
+gradle-app.setting
+
+# Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
+!gradle-wrapper.jar
+
+# Cache of project
+.gradletasknamecache
+
+# # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
+# gradle/wrapper/gradle-wrapper.properties
+
+### Gradle Patch ###
+**/build/
